feat: Se realizan algunos ajustes segun recomendaciones de seguridad. udistrital/resoluciones_cliente#79
